[package]
name = "esp-template"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
esp32c3 = [
  "esp-backtrace/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
  "esp-hal/esp32c3",
  "esp-hal-embassy/esp32c3",
  "esp-println/esp32c3",
]
esp32c6 = [
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-hal/esp32c6",
  "esp-hal-embassy/esp32c6",
  "esp-println/esp32c6",
]

[dependencies]
defmt = "1"
embassy-executor = "0.9"
static_cell = "2"

[dependencies.embassy-time]
version = "0.5"
features = ["defmt-timestamp-uptime-us"]

[dependencies.esp-backtrace]
git = "https://github.com/esp-rs/esp-hal.git"
rev = "c700b8bda30e8f56cba96b90fcfe021946191f26"
features = ["defmt", "panic-handler"]

[dependencies.esp-bootloader-esp-idf]
git = "https://github.com/esp-rs/esp-hal.git"
rev = "c700b8bda30e8f56cba96b90fcfe021946191f26"

[dependencies.esp-hal]
git = "https://github.com/esp-rs/esp-hal.git"
rev = "c700b8bda30e8f56cba96b90fcfe021946191f26"
features = ["unstable"]

[dependencies.esp-hal-embassy]
git = "https://github.com/esp-rs/esp-hal.git"
rev = "c700b8bda30e8f56cba96b90fcfe021946191f26"

[dependencies.esp-println]
git = "https://github.com/esp-rs/esp-hal.git"
rev = "c700b8bda30e8f56cba96b90fcfe021946191f26"
features = ["defmt-espflash"]
