[package]
name = "esp-template"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
esp32c3 = [
  "esp-backtrace/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
  "esp-hal/esp32c3",
  "esp-println/esp32c3",
  "esp-rtos/esp32c3",
]
esp32c6 = [
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-hal/esp32c6",
  "esp-println/esp32c6",
  "esp-rtos/esp32c6",
]

[dependencies]
defmt = "1"
esp-bootloader-esp-idf = "0.4"
static_cell = "2"

[dependencies.embassy-executor]
version = "0.9"
features = ["defmt"]

[dependencies.embassy-time]
version = "0.5"
features = ["defmt-timestamp-uptime-us"]

[dependencies.esp-backtrace]
version = "0.18"
features = ["defmt", "panic-handler"]

[dependencies.esp-hal]
version = "1"
features = ["unstable"]

[dependencies.esp-println]
version = "0.16"
features = ["defmt-espflash"]

[dependencies.esp-rtos]
version = "0.2"
features = ["embassy"]

[lints.clippy]
mem_forget = "deny"
